# Soccer-Robot-Hardware

./: CMakeLists.txt  README.md  passwords.txt  sdkconfig  wokwi.toml
include/soccerbot/: activeState.h  activityLed.h  adc.h  allocation.h  button.h  config.h  dac.h  desc.h  differentialKinematics.h  lightSensor.h  log.h  mdns.h  motor.h  net.h  robot.h  unit.h  update.h  util.h  wireless.h
main/: CMakeLists.txt
main/src/: activityLed.cpp  adc.cpp  button.cpp  config.cpp  dac.cpp  desc.cpp  differentialKinematics.cpp  main.cpp  motor.cpp  netThread.cpp  robotThread.cpp  update.cpp  wireless.cpp
scripts/: admin.py  support.py
